# signal-backup-extract

./: .gitignore  .pre-commit-config.yaml  README.md  dump_contacts.py  pyproject.toml  requirements-dev.txt  signal_backup_extract.py
.github/workflows/: ci.yml
tests/: test_dump_contacts.py  test_signal_backup_extract.py
