[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "signal-backup-extract"
version = "0.1.0"
description = "Filter a Signal Desktop plaintext export and copy referenced media"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
signal-backup-extract = "signal_backup_extract:main"

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, B = bugbear (smells),
# C4 = comprehension improvements, SIM = simplify, UP = pyupgrade
select = ["E", "W", "F", "I", "B", "C4", "SIM", "UP"]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
files = ["signal_backup_extract.py", "dump_contacts.py"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
